@@ -24,7 +24,7 @@
 
 	Detached signatures are still supported as before,
 	for the user everything with them is as known, but
-	the commandline option -a (--detach) have to be
+	the commandline option -f (--sigfile) have to be
 	applied. Internally, however, inputs will be read in
 	32k blockwise as well. Detached signatures are now
 	z85 encoded always.
@@ -38,6 +38,15 @@
 	how to behave if decryption works but the signature
 	doesn't verify. Currently pcp1 failes in this case,
 	but leaves the decrypted result on disk. Hm...
+
+	The default encryption mode with pcp (and pbp as of
+	this writing) is ECB. Each 32k block is encrypted
+	independently. While ECB is generally a bad choice,
+	the 32k blocksize compensates for it. However, just
+	to have to option, if we decide to use CBC instead,
+	I already implemented it. It must be enabled at
+	compile time with ./configure --enable-cbc. CBC mode
+	in PCP uses a blocksize of 1k.
 
 0.1.5   Fixed a segmentation fault when using pcp1 -t on a
 	public key. I added a double free() there by purpose
